Changes to be committed: 	modified:   app/Http/Controllers/api/PaymentsController.php 	modified:   app/Http/Controllers/api/PropertyController.php 	modified:   app/Models/Payments.php 	modified:   app/Services/PaymentService.php 	modified:   public/api.yml 	modified:   routes/api.php
