# app/Http/Controllers/api/PaymentsController.php
@@ -3,6 +3,7 @@
 namespace App\Http\Controllers\api;
 
 use App\Http\Controllers\Controller;
+use App\Models\LeaseAgreements;
 use Illuminate\Support\Facades\Validator;
 use Illuminate\Support\Facades\Auth;
 use Illuminate\Http\Request;
@@ -32,5 +33,18 @@ class PaymentsController extends Controller{
         $payment = $this->paymentService->save($request);
 
         return response()->json($payment, 201);
+    }
+
+    public function paymentsHistory(Request $request, $id){
+       $lease = LeaseAgreements::where('id', $id)->where('active', true)->first();
+
+        if(!$lease){
+            return response()->json(['message' => 'No se puede procesar la solicitud. Faltan campos'], 422);
+        }
+
+        $payments = $this->paymentService->history($lease);
+
+        return response()->json($payments, 200);
+
     }
 }
